# danish

./: CMakeLists.txt  Makefile.am  README.md  README.txt  autogen.sh  automk.sh  clean.sh  cleandanish.sh  config.h  configure.ac  danish.desktop  main.c  makefile  page.c  page.h  sftp.c  shell.c  shell.h  site.cpp  site.h  ssh.c  ssh.h  util.h
docs/: Makefile.am  danioc.desktop  danissh.desktop
include/: config.h  page.h  site.h
lib/: Makefile.am  site.h  ssh.h
po/: Makefile.in  az.po.baiduyun.uploading.cfg  da.po
src/: Makefile.am  danioc.in
src/danioc/: Makefile.am  danioc-gtk.c  danioc-gtk.h  danioc.c  danioc.h
src/gftp-gtk/: Makefile.am
src/gftp-text/: Makefile.am
