## Process this file with automake to produce Makefile.in
#man文件
man_MANS=gftp.1
SUBDIRS=sample.gftp

#额外文件
EXTRA_DIST=USERS-GUIDE gftp.1 gftp.desktop

#文件路径和内容
gftpdocdir = ${docdir}
gftpdoc_DATA = ../README.md ../LICENSE ../AUTHORS USERS-GUIDE ../ChangeLog

Utilitiesdir = $(datadir)/applications
Utilities_DATA = gftp.desktop

